--- a/_includes/components/authors.html
+++ b/_includes/components/authors.html
@@ -19,7 +19,7 @@
             <img src="/assets/img/pages/blog/authors/{{ author_data.image }}">
           </a>
           <div class="author__description">
-            <strong>{{ author_data.name }}</strong> {{ author_data.description }}
+            <strong>{{ author_data.full_name }}</strong> {{ author_data.description }}
           </div>
         </div>
       {% endfor %}
