--- a/_includes/components/authors.html
+++ b/_includes/components/authors.html
@@ -9,13 +9,13 @@
   <hr class="separator">
 {% else %}
   <div class="authors">
-    <h2 class="author__title">About the author{% if page.authors.size > 1 %}s{% endif %}</h2>
+    <h2 class="author__title">About the author{% if page.about_authors.size > 1 %}s{% endif %}</h2>
 
     <div class="author__container">
       {% for author in page.about_authors %}
         {% assign author_data = site.data.authors | where:"id", author | first %}
-        <div class="author__card  author__card--{{ page.authors.size }}">
-          <a class="author__image  author__image--{{ page.authors.size }}" href="/assets/img/pages/blog/authors/{{ author_data.image }}" data-lightbox="/assets/img/authors/{{ author_data.image }}">
+        <div class="author__card  author__card--{{ page.about_authors.size }}">
+          <a class="author__image  author__image--{{ page.about_authors.size }}" href="/assets/img/pages/blog/authors/{{ author_data.image }}" data-lightbox="/assets/img/authors/{{ author_data.image }}">
             <img src="/assets/img/pages/blog/authors/{{ author_data.image }}">
           </a>
           <div class="author__description">
