--- a/_sass/2-components/_separators.sass
+++ b/_sass/2-components/_separators.sass
@@ -1,5 +1,5 @@
 .separator
-  margin-bottom: 4rem 0
+  margin: 6rem auto 4rem
   border: $base-border
   border-color: darken($whitesmoke, 2%)
   width: 75%
