Add link tracking events

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -17,10 +17,10 @@
           </a>
           <ul class="dropdown">
             <li>
-              <a href="http://docs.beyondshop.cloud/" class="dropdown__link" target="_blank">Beyond API</a>
+              <a href="http://docs.beyondshop.cloud/" class="dropdown__link" target="_blank" onClick="ga(send, event, Docs, Click, Dropdown Beyond Docs);">Beyond API</a>
             </li>
             <li>
-              <a href="/apps/" class="dropdown__link  {% active_menu apps %}">Now API</a>
+              <a href="/apps/" class="dropdown__link  {% active_menu apps %}" onClick="ga(send, event, Docs, Click, Dropdown Now Docs);">Now API</a>
             </li>
           </ul>
         </li>
