--- a/_sass/3-pages/_beyond-essence.sass
+++ b/_sass/3-pages/_beyond-essence.sass
@@ -1,3 +1,8 @@
 .beyond-essence
+
   .content-wrapper
     margin-top: 12rem
+    position: relative
+
+    +grid-media($grid-large)
+      display: flex
