Add sidebar javascript and arrows

--- a/_layouts/beyond-essence.html
+++ b/_layouts/beyond-essence.html
@@ -7,6 +7,7 @@
     <main>
       <div class="content-wrapper">
         {% sidebar beyond_essence %}
+        <script src="/assets/js/sidebar.js"></script>
         <div class="card  card--markdown">
           {{ content }}
         </div>
