--- a/_sass/2-components/_sidebars.sass
+++ b/_sass/2-components/_sidebars.sass
@@ -2,13 +2,11 @@
   background: #fff
   box-shadow: 0 2px 7px rgba(0,0,0,0.15)
   border-radius: 4px
-  padding: 2rem
   margin-bottom: 3rem
 
   +grid-media($grid-large)
     min-width: 22rem
     margin-right: 2rem
-    padding: 0
     box-shadow: none
     border-radius: 0
     background: transparent
@@ -21,30 +19,43 @@
     text-transform: uppercase
     color: #6E808C
     font-weight: bold
-    padding: 2rem 0
+    padding: 2rem
     border-bottom: 1px solid #e1e1e1
-
-    &:first-of-type
-      padding-top: 0
+    display: flex
+    justify-content: space-between
 
     &:last-of-type
-      padding-bottom: 0
       border: 0
 
     +grid-media($grid-large)
       padding: 0
       border: 0
 
+  &__arrow
+
+    +grid-media($grid-large)
+      display: none
+
   &__section
-    padding-left: 2rem
-    margin: .5rem 0 2rem
+    padding: .5rem 0 .5rem 2rem
     display: none
+    border-bottom: 1px solid #e1e1e1
+
+    &:last-of-type
+      border-top: 1px solid #e1e1e1
 
     +grid-media($grid-large)
       display: block
+      padding: .5rem 0 2rem 2rem
+      border: 0
 
   &__link
     line-height: 2
 
     a
       color: #99B5C6
+
+    &--active
+
+      a
+        color: #6E808C
