--- a/_sass/2-components/_sidebars.sass
+++ b/_sass/2-components/_sidebars.sass
@@ -44,6 +44,9 @@
     &:last-of-type
       border-top: 1px solid #e1e1e1
 
+      +grid-media($grid-large)
+        border: 0
+
     +grid-media($grid-large)
       display: block
       padding: .5rem 0 2rem 2rem
