Fix menu not opening

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -45,6 +45,8 @@
   </div>
 </div>
 
+<script src="/assets/js/menu.js"></script>
+
 {% unless page.layout == 'no-header' or page.layout == 'beyond-essence' %}
   <script src="/assets/js/navbar.js"></script>
 {% endunless %}
