--- a/_sass/2-components/_authors.sass
+++ b/_sass/2-components/_authors.sass
@@ -52,7 +52,9 @@
       margin-bottom: 0
 
     img
-      +size(100%)
+      width: 100% !important
+      height: 100% !important
+      margin: 0 !important
 
   &__description
     margin: 0 2rem
