Fix beyond essence sidebar

--- a/_sass/2-components/_sidebars.sass
+++ b/_sass/2-components/_sidebars.sass
@@ -12,7 +12,7 @@
     background: transparent
 
   +grid-media($grid-sidebar)
-    position: absolute
+    position: relative
     left: -24rem
 
   &__button
