--- a/_sass/3-pages/_beyond-essence.sass
+++ b/_sass/3-pages/_beyond-essence.sass
@@ -6,3 +6,11 @@
 
     +grid-media($grid-large)
       display: flex
+      align-items: flex-start
+
+  .card--markdown
+
+    +grid-media($grid-sidebar)
+      min-width: 100%
+      position: relative
+      left: -24rem
