Add scroll tracking

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -68,4 +68,12 @@
     </div>
 
   </div>
+
+  <script src="/assets/js/jquery.scrolldepth.min.js"></script>
+
+  <script>
+    $(function() {
+      $.scrollDepth();
+    });
+  </script>
 </footer>
