--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -69,6 +69,10 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
       li
         margin-left: 1em
 
+        p
+          margin: 0
+          display: initial
+
     div:not(.custom-image .author__image) img:not(.icon-share), P img:not(.icon-share)
       margin: 2rem 0
       margin-left: -$card-margin-mobile
