Update: Reduce height of header for non-post pages

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -62,7 +62,8 @@ $navbar-border:                           1px solid lighten($navbar-background-c
 $navbar-input-background-color:           lighten($navbar-background-color, 10%)
 
 // Header
-$header-height:                           400px
+$header-height:                           250px
+$post-header-height:                      400px
 
 // Pagination
 $pagination-disabled-bg:                  #e1e1e1
