--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -6,9 +6,12 @@
   display: flex
   align-items: center
   box-shadow: $base-box-shadow
-  padding-top: $navbar-height
+  padding-top: $mobile-navbar-height
   box-sizing: border-box
   position: relative
+
+  +grid-media($grid-medium)
+    padding-top: $navbar-height
 
   &-overlay
     position: absolute
