--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -2,14 +2,14 @@
   position: fixed
   top: 0
   width: 100%
-  height: $navbar-height
+  height: $mobile-navbar-height
   display: flex
   align-items: center
   z-index: 9999
   transition: $base-transition
 
   +grid-media($grid-medium)
-    height: auto
+    height: $navbar-height
 
   &-wrapper
     width: 90%
