--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -31,21 +31,22 @@ body.about
       width: 100px
       height: 100px
       margin-right: 12px
+      background-position: center
 
       &--hamburg
-        background-image: url('/assets/img/pages/about/city.png')
+        background-image: url('/assets/img/pages/about/hamburg.jpg')
         background-size: cover
 
       &--jena
-        background-image: url('/assets/img/pages/about/city.png')
+        background-image: url('/assets/img/pages/about/jena.jpg')
         background-size: cover
 
       &--barcelona
-        background-image: url('/assets/img/pages/about/city.png')
+        background-image: url('/assets/img/pages/about/barcelona.jpg')
         background-size: cover
 
       &--bilbao
-        background-image: url('/assets/img/pages/about/city.png')
+        background-image: url('/assets/img/pages/about/bilbao.jpg')
         background-size: cover
 
     &__text
