--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -26,9 +26,7 @@ body.about
       padding: 25px 10px
       background-color: rgba(178, 199, 212, 0.6)
       box-sizing: border-box
-    
-      &:not(:last-child)
-        border-right: 2px solid white
+      border-right: 2px solid $whitesmoke
 
     &__card-header
       text-align: center
