Chore: Handle different screen sizes

--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -18,22 +18,33 @@ body.about
   .teams
     padding: 0 10px
 
-    .slick-track
+    .carousel
       background-image: url(/assets/img/pages/common/footer.jpg)
+      background-size: cover
+      background-position: center
 
     .carousel__item
-      height: 164px
-      padding: 25px 10px
-      background-color: rgba(178, 199, 212, 0.6)
+      padding: 30px 10px
       box-sizing: border-box
       border-right: 2px solid $whitesmoke
 
-    &__card-header
-      text-align: center
-      margin-bottom: 10px
+      +grid-media($grid-small)
+        height: 163px
 
+        &:nth-child(even)
+          background-color: rgba(133, 189, 189, 0.3)
+
+    &__card-header,
     &__card-content
       text-align: center
+      color: $white
+      text-shadow: $base-text-shadow
+
+    &__card-header
+      margin-bottom: 5px
+
+    &__card-content
+      line-height: 1.4
       
   .locations
     +grid-collapse
