--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -17,6 +17,12 @@
       <a href="https://youtube.com/channel/{{site.youtube_username}}" target="_blank">
         <i class="fab  fa-fw  fa-2x  fa-youtube  icon  icon--youtube"></i>
       </a>
+      <a href="https://www.linkedin.com/company/{{site.linkedin_username}}" target="_blank">
+        <i class="fab  fa-fw  fa-2x  fa-linkedin  icon  icon--linkedin"></i>
+      </a>
+      <a href="https://www.xing.com/companies/{{site.xing_username}}" target="_blank">
+        <i class="fab  fa-fw  fa-2x  fa-xing  icon  icon--xing"></i>
+      </a>
       {% assign url = page.url | split: '/' %}
       {% if url[1] == 'blog' %}
         <a href="/blog/feed.xml" target="_blank">
