--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -10,6 +10,10 @@ body.about
       margin-bottom: 1rem
       text-align: center
 
+    .section__body
+      text-align: center
+      margin-bottom: 4rem
+
   .introduction
 
     .section__body
@@ -52,6 +56,100 @@ body.about
     &__card-content
       line-height: 1.4
 
+  .cities
+    +grid-collapse
+    +grid-container
+    padding: 4rem
+    box-sizing: border-box
+    display: flex
+    align-items: stretch
+    flex-direction: row
+    flex-wrap: wrap
+
+    .city
+      +grid-column(6)
+      position: relative
+
+      &:not(:nth-last-child(-n+2))
+        margin-bottom: 6rem
+
+      &__name
+        background: $cat-all-categories
+        position: absolute
+        top: 2rem
+        left: -1rem
+        color: $white
+        line-height: 1
+        font-weight: bold
+        padding: .5em 1em
+        font-size: 1.6rem
+        letter-spacing: .05em
+        box-shadow: $hover-box-shadow
+        border-top-right-radius: $base-border-radius
+        border-bottom-right-radius: $base-border-radius
+
+        &::before
+          content: ''
+          position: absolute
+          left: 0
+          bottom: -1rem
+          width: 0
+          height: 0
+          border-style: solid
+          border-width: 0 1rem 1rem 0
+          border-color: transparent $cat-all-categories-hov transparent transparent
+
+      &__header
+        height: 22rem
+        background-position: center
+        background-size: cover
+        margin-bottom: 2rem
+
+      .slick-prev
+        left: 10px
+        z-index: 1
+
+      .slick-next
+        right: 10px
+        z-index: 1
+
+      .quote
+        display: flex
+
+        &__image
+          +size(7.5rem)
+          min-width: 7.5rem
+          min-height: 7.5rem
+          border-radius: 100%
+          margin-right: 2rem
+
+        &__text
+          border: 1px solid #dddddd
+          position: relative
+          padding: .5em
+          font-size: 1.6rem
+          line-height: 1.3
+
+        &__author
+          color: #cccccc
+          font-style: italic
+          font-weight: 700
+
+        &__icon
+          background: white
+          color: #dddddd
+          position: absolute
+
+          &--left
+            +padding(0 .3em .3em 0)
+            top: -11px
+            left: -1px
+
+          &--right
+            +padding(.3em 0 0 .3em)
+            bottom: -11px
+            right: -1px
+
   .locations
     +grid-collapse
     +grid-container
@@ -88,7 +186,7 @@ body.about
 
       +grid-media($grid-large)
         +grid-column(5)
-    
+
     &__text
       line-height: 1.3
       text-align: justify
@@ -115,7 +213,7 @@ body.about
 
       &--barcelona
         background-image: url('/assets/img/pages/about/barcelona.jpg')
-        background-size: cover
+
 
       &--bilbao
         background-image: url('/assets/img/pages/about/bilbao.jpg')
