Add Jena pictures

--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -245,7 +245,7 @@ body.about
 
       &--barcelona
         background-image: url('/assets/img/pages/about/barcelona.jpg')
-
+        background-size: cover
 
       &--bilbao
         background-image: url('/assets/img/pages/about/bilbao.jpg')
