--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -214,7 +214,7 @@ body.about
     &__text-box
       +grid-column(12)
       box-shadow: $base-box-shadow
-      padding: 30px
+      padding: 30px 40px
       box-sizing: border-box
       margin-top: 20px
       background-image: url(/assets/img/pages/about/paolo.jpg)
@@ -238,7 +238,7 @@ body.about
       text-align: justify
       color: $white
       text-shadow: $base-text-shadow
-      margin-bottom: 20px
+      margin-bottom: 35px
 
   .tooltip
     display: flex
