Add events page

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -28,10 +28,13 @@
           <a href="/blog/" class="navigation__link  {% active_menu blog %}">Blog</a>
         </li>
         <li class="navigation__item">
+          <a href="/about/" class="navigation__link  {% active_menu about %}">About</a>
+        </li>
+        <li class="navigation__item">
           <a href="/devjobs/" class="navigation__link  {% active_menu devjobs %}">Jobs</a>
         </li>
         <li class="navigation__item">
-          <a href="/about/" class="navigation__link  {% active_menu about %}">About</a>
+          <a href="/events/" class="navigation__link  {% active_menu events %}">Events</a>
         </li>
       </ul>
     </nav>
