--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -51,7 +51,7 @@ body.about
       line-height: 1.4
 
   .statistics
-    
+
     .card-wrapper
       display: flex
       flex-wrap: wrap
@@ -158,7 +158,7 @@ body.about
         &__text
           border: 1px solid #dddddd
           position: relative
-          padding: .5em
+          padding: 1em
           font-size: 1.6rem
           line-height: 1.3
 
