Make colleague images black and white

--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -139,6 +139,7 @@ body.about
           min-height: 7.5rem
           border-radius: 100%
           margin: 0 auto 2rem
+          filter: grayscale(100%)
 
           +grid-media($grid-small)
             margin: 0 2rem 0 0
