Update the section Get in touch with us

--- a/_sass/3-pages/_devjobs.sass
+++ b/_sass/3-pages/_devjobs.sass
@@ -130,16 +130,22 @@
       .info__text
         font-size: 1.6rem
 
-    .image-harm
+    .contact-person
       display: none
       position: absolute
       height: 16rem
       bottom: 0
-      right: 1rem
+      bottom: 0
+      filter: grayscale(100%)
 
       +grid-media($grid-huge)
         display: block
 
+    .image-serena
+      left: 1rem
+
+    .image-harm
+      right: 1rem
 
 
 
