Fix image position

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -202,12 +202,14 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
 
         +grid-media($grid-medium)
           margin-right: 4rem
+          margin-left: 6rem
 
       &--right
         float: right
         margin-left: $card-margin-mobile
 
         +grid-media($grid-medium)
+          margin-right: 6rem
           margin-left: 4rem
 
       &__image
