--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -7,14 +7,13 @@
       </a>
     </div>
 
-    <div id="row">
-      <form action="https://epages.us20.list-manage.com/subscribe/post?u=4f7bef41ef50d55ff51b4972b&amp;id=58c9bec70d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div class="row row--social">
+      <form action="https://epages.us20.list-manage.com/subscribe/post?u=4f7bef41ef50d55ff51b4972b&amp;id=58c9bec70d" method="post" name="mc-embedded-subscribe-form" class="form form__row" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Newsletter</label>
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
+          <label class="label label--white" for="mce-EMAIL">Newsletter</label>
+          <input type="email" value="" name="EMAIL" class="" id="mce-EMAIL" placeholder="Email address*" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4f7bef41ef50d55ff51b4972b_58c9bec70d" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            <input type="submit" value="Subscribe" name="subscribe" class="button">
         </div>
       </form>
     </div>
