--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -9,11 +9,11 @@
 
     <div class="row row--social">
       <form action="https://epages.us20.list-manage.com/subscribe/post?u=4f7bef41ef50d55ff51b4972b&amp;id=58c9bec70d" method="post" name="mc-embedded-subscribe-form" class="form form__row" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <label class="label label--white" for="mce-EMAIL">Newsletter</label>
-          <input type="email" value="" name="EMAIL" class="" id="mce-EMAIL" placeholder="Email address*" required>
+        <label class="newsletter__label" for="mce-EMAIL">Newsletter</label>
+        <div class="newsletter__wrapper">
+          <input type="email" value="" name="EMAIL" class="newsletter__input" id="mce-EMAIL" placeholder="Email address*" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <input type="submit" value="Subscribe" name="subscribe" class="button">
+          <input type="submit" value="Subscribe" name="subscribe" class="newsletter__button">
         </div>
       </form>
     </div>
