Change pixels to rem

--- a/_sass/2-components/_newsletter.sass
+++ b/_sass/2-components/_newsletter.sass
@@ -32,7 +32,7 @@
 
   &__input
     background: none
-    border: 2px solid $white
+    border: .2rem solid $white
     color: $white
     box-sizing: border-box
     padding: .5em 1em
@@ -53,7 +53,7 @@
     padding: .5em 1em
     border: 0
     width: 100%
-    min-width: 175px
+    min-width: 17.5rem
 
     +grid-media($grid-medium)
       width: 32.6%
