--- a/_sass/2-components/_newsletter.sass
+++ b/_sass/2-components/_newsletter.sass
@@ -48,7 +48,7 @@
       width: 66.4%
 
   &__button
-    background-color: $dev-green-blue
+    background-color: $dev-darkslategray
     color: $white
     padding: .5em 1em
     border: 0
