--- a/_sass/2-components/_newsletter.sass
+++ b/_sass/2-components/_newsletter.sass
@@ -36,6 +36,7 @@
     color: $white
     box-sizing: border-box
     padding: .5em 1em
+    outline: none
     width: 100%
     margin-bottom: .5em
 
