Update link to Beyond Docs

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -17,7 +17,7 @@
           </a>
           <ul class="dropdown">
             <li>
-              <a href="http://docs.beyondshop.cloud/" class="dropdown__link" target="_blank" onClick="ga('send', 'event', 'Docs', 'click', 'Dropdown Beyond Docs');">Beyond API</a>
+              <a href="/beyond-docs/" class="dropdown__link" target="_blank" onClick="ga('send', 'event', 'Docs', 'click', 'Dropdown Beyond Docs');">Beyond API</a>
             </li>
             <li>
               <a href="/apps/" class="dropdown__link  {% active_menu apps %}" onClick="ga('send', 'event', 'Docs', 'click', 'Dropdown Now Docs');">Now API</a>
