--- a/_sass/2-components/_newsletter.sass
+++ b/_sass/2-components/_newsletter.sass
@@ -8,7 +8,7 @@
   &__label
     color: $white
     font-weight: bold
-    font-size: 1.3em
+    font-size: 1.1em
     width: 100%
     display: inline-flex
     flex-shrink: 1
@@ -32,16 +32,17 @@
 
   &__input
     background: none
-    border: .2rem solid $white
+    border: .1rem solid $white
     color: $white
     box-sizing: border-box
-    padding: .5em 1em
+    padding: .4em 1em
     outline: none
     width: 100%
     margin-bottom: .5em
 
     &::placeholder
       color: $white
+      font-size: .9em
 
     +grid-media($grid-medium)
       margin-bottom: 0
