Reset button style for iPhone and Mozilla

--- a/_sass/1-config/_reset-css.sass
+++ b/_sass/1-config/_reset-css.sass
@@ -46,3 +46,10 @@ q:before, q:after
 table
   border-collapse: collapse
   border-spacing: 0
+
+button, input
+  &[type="button"],
+  &[type="reset"],
+  &[type="submit"]
+    -webkit-appearance: none
+    -moz-appearance: none
