Move lightbox references to head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
 
+  <script src="/assets/js/lightbox.min.js"></script>
+  <link rel="stylesheet" href="/assets/css/lightbox.css" />
+
   {% assign ga_paths = "['/', 'blog', 'devjobs']" %}
 
   {% if ga_paths contains base_url %}
