Configure rss feed

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -26,7 +26,7 @@
       </a>
       {% assign url = page.url | split: '/' %}
       {% if url[1] == 'blog' %}
-        <a href="/blog/feed.xml" target="_blank">
+        <a href="/feed.xml" target="_blank">
           <i class="fas  fa-fw  fa-2x  fa-rss  icon  icon--rss"></i>
         </a>
       {% endif %}
