Relocate rss feed icon

--- a/_includes/components/post-share.html
+++ b/_includes/components/post-share.html
@@ -8,4 +8,8 @@
     <i class="fab  fa-fw  fa-2x  fa-facebook-square"></i>
   </a>
 
+  <a href="/blog/feed.xml" target="_blank" rel="nofollow" target="_blank">
+    <i class="fas  fa-fw  fa-2x  fa-rss-square"></i>
+  </a>
+
 </div>
