--- a/_includes/components/post-share.html
+++ b/_includes/components/post-share.html
@@ -8,7 +8,7 @@
     <i class="fab  fa-fw  fa-2x  fa-facebook-square"></i>
   </a>
 
-  <a href="/blog/feed.xml" target="_blank" rel="nofollow" target="_blank">
+  <a href="/blog/feed.xml" target="_blank" rel="nofollow">
     <i class="fas  fa-fw  fa-2x  fa-rss-square"></i>
   </a>
 
