--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -45,3 +45,17 @@ a
 
   &:hover
     color: darken($link-font-color, 10%)
+
+blockquote
+  font-style: italic
+  position: relative
+  padding: 0 5em
+
+  &::before
+    content: "“"
+    position: absolute
+    font-size: 510%
+    line-height: .8
+    opacity: .2
+    top: 0
+    left: 9.4rem
