Fix blockquote layout
especially for narrow screens

--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -49,7 +49,7 @@ a
 blockquote
   font-style: italic
   position: relative
-  padding: 0 5em
+  margin: 0 10%
 
   &::before
     content: "“"
@@ -58,4 +58,4 @@ blockquote
     line-height: .8
     opacity: .2
     top: 0
-    left: 9.4rem
+    left: -2rem
