Fix issue with CSS for links

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -11,6 +11,9 @@ $widths: 5,10,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100
     max-width: 1080px
     margin: 0 auto
 
+    a
+      display: initial !important
+
     h1, h2, h3, h4, h5, h6
       margin: 4rem $card-margin-mobile 2rem
 
