--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
         {{ content }}
       </div>
     </main>
+    {% include cookie_notice.html %}
     {% include sections/footer.html %}
   </body>
 </html>
