Add styles to popup

--- a/_sass/2-components/_cookie_notice.sass
+++ b/_sass/2-components/_cookie_notice.sass
@@ -12,6 +12,19 @@
     justify-content: center
     align-items: center
 
+  &__title
+    padding-bottom: 15px
+    font-family: $base-font-family
+    font-size: 16px
+
+
   &__actions
     display: flex
     justify-content: space-between
+    padding-top: 20px
+
+    &--accept
+      background-color: #56b0ef
+
+    &--reject
+      background-color: #8f8f8f
