--- a/_includes/cookie_notice.html
+++ b/_includes/cookie_notice.html
@@ -5,12 +5,12 @@
     <h3 class="cookie-notice__title">Cookie settings</h3>
 
     <div class="cookie-notice__info">
-      This developer portal uses cookies to improve your user experience.
-      Some cookies are required for the basic functionality of the portal
-      while other cookies help us to improve our content and layout.
-      You can agree to all cookies by selecting "Accept all" or you can select
-      "Accept required" to confirm only the required ones. Further information
-      can be found in our <a target="_blank" href="https://epages.com/es/proteccion-datos/">Data protection declaration</a>.
+      Our website uses cookies to improve your user experience. Some cookies are
+      required for the basic functionality of the website while other cookies help
+      us to improve our content and layout. You can agree to all cookies by selecting
+      "Accept all" or you can select "Accept required" to confirm only the required ones.
+      Further information can be found in our
+      <a target="_blank" href="https://epages.com/es/proteccion-datos/">Data protection declaration</a>.
     </div>
 
     <div class="cookie-notice__actions">
