--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,6 +50,9 @@
       $(document).ready(function() {
         $('.cookie-notice__backdrop').css('display', 'flex');
       });
+    } else if (readCookie('cookie-notice-dismissed') == 'true') {
+      /* Load user's custom scripts if cookie notice has been accepted */
+      {% include cookie_notice_scripts.html %}
     }
   </script>
 
