Align text buttons  on mobile view

--- a/_sass/2-components/_cookie_notice.sass
+++ b/_sass/2-components/_cookie_notice.sass
@@ -23,6 +23,7 @@
     display: grid
     justify-content: space-between
     padding-top: 2rem
+    text-align: center
 
     +grid-media($grid-medium)
       display: flex
