--- a/_sass/2-components/_cookie_notice.sass
+++ b/_sass/2-components/_cookie_notice.sass
@@ -14,9 +14,9 @@
     align-items: center
 
   &__title
-    padding-bottom: 15px
+    padding-bottom: 1.5rem
     font-family: $base-font-family
-    font-size: 16px
+    font-size: 1.6rem
 
 
   &__actions
