--- a/_sass/2-components/_quotes.sass
+++ b/_sass/2-components/_quotes.sass
@@ -19,6 +19,7 @@
   &__text
     border: 1px solid #dddddd
     position: relative
+    padding: 1em
     font-size: 1.6rem
     line-height: 1.3
 
@@ -41,3 +42,6 @@
       +padding(.3em 0 0 .3em)
       bottom: -11px
       right: -1px
+
+  p
+    margin: 0
