--- a/_sass/3-pages/_link_collection.sass
+++ b/_sass/3-pages/_link_collection.sass
@@ -19,6 +19,7 @@ html
     color: $white
     display: block
     width: 40rem
+    max-width: 80%
     text-align: center
     padding: 10px 20px
     margin: 0 auto 20px
